1021 修改快速輸入內容

--- a/PaiPaiGO/Views/CC_Members/Login.cshtml
+++ b/PaiPaiGO/Views/CC_Members/Login.cshtml
@@ -83,8 +83,8 @@
 <script>
     //測試紐
     function loginMember() {
-        document.getElementById('EmailInput').value = "catyang47@gmail.com";
-        document.getElementById('PasswordInput').value = "pin123456";
+        document.getElementById('EmailInput').value = "chaewon0801@gmail.com";
+        document.getElementById('PasswordInput').value = "pin08011080";
     }
 </script>
 
