--- a/PaiPaiGO/Views/CC_Members/Resgister.cshtml
+++ b/PaiPaiGO/Views/CC_Members/Resgister.cshtml
@@ -213,11 +213,11 @@
 
     //測試紐
     function recordText() {
-        document.getElementById('inputEmail').value = "catyang47@gmail.com";
-        document.getElementById('inputPassword').value = "pin123456";
-        document.getElementById('inputname').value = "陳小小";
-        document.getElementById('inputphone').value = "0912345678";
-        document.getElementById('inputAddress').value = "公益路51號";
+        document.getElementById('inputEmail').value = "miyeon0103@gmail.com";
+        document.getElementById('inputPassword').value = "pin01033010";
+        document.getElementById('inputname').value = "曹薇娟";
+        document.getElementById('inputphone').value = "0943456456";
+        document.getElementById('inputAddress').value = "臺灣大道三段301號";
     }
 
 
