1022 修bug 1.註冊成功沒跳通知，被按鈕顏色擋道的樣子 2.加一些錄影用動作

--- a/PaiPaiGO/Views/CC_Members/Login.cshtml
+++ b/PaiPaiGO/Views/CC_Members/Login.cshtml
@@ -83,8 +83,8 @@
 <script>
     //測試紐
     function loginMember() {
-        document.getElementById('EmailInput').value = "chaewon0801@gmail.com";
-        document.getElementById('PasswordInput').value = "pin08011080";
+        document.getElementById('EmailInput').value = "miyeon0103@gmail.com";
+        document.getElementById('PasswordInput').value = "pin01033010";
     }
 </script>
 
