--- a/PaiPaiGO/Views/CC_Members/Resgister.cshtml
+++ b/PaiPaiGO/Views/CC_Members/Resgister.cshtml
@@ -219,9 +219,9 @@
         document.getElementById('inputphone').value = "0943456456";
         document.getElementById('inputAddress').value = "臺灣大道三段301號";
     }
-    function emailText() {
-        document.getElementById('inputEmail').value = "chaewon0801@gmail.com";
-    }
+    //function emailText() {
+    //    document.getElementById('inputEmail').value = "chaewon0801@gmail.com";
+    //}
 
 </script>
 
